Fix cutoff in header and change link preview font size

--- a/src/components/LinkPreview/LinkPreview.module.scss
+++ b/src/components/LinkPreview/LinkPreview.module.scss
@@ -2,7 +2,7 @@
   width: 100%;
   text-decoration: none;
   color: var(--text-tertiary);
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 400;
   line-height: 20px;
   overflow: hidden;
@@ -74,6 +74,7 @@
 }
 
 .previewTitle {
+  font-weight: 700;
   color: var(--text-primary);
 }
 
