--- a/src/components/Note/NoteHeader/NoteHeader.module.scss
+++ b/src/components/Note/NoteHeader/NoteHeader.module.scss
@@ -31,13 +31,12 @@
     display: flex;
     flex-direction: column;
     font-size: 16px;
-    line-height: 17px;
+    line-height: 18px;
     font-weight: 400;
     height: 48px;
     align-items: flex-start;
-    justify-content: space-around;
+    justify-content: center;
     gap: 2px;
-    // padding-bottom: 4px;
 
     .verification {
       max-width: 470px;
